tests/diagnostics/insert_immutable.kal
# insert needs a mutable HashMap.
{ let m: HashMap<str, i64> = hashmap(); insert(m, "k", 1); };
